openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ace-sample
  labels:
    app: ace-sample
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: ace-sample
  template:
    metadata:
      labels:
        app: ace-sample
        deployment: ace-sample
    spec:
      containers:
        - name: ace-sample
          image: kazhar/ace-sample:0.3
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7600
              protocol: TCP
            - containerPort: 7800
              protocol: TCP
          readinessProbe:
            tcpSocket:
              port: 7800
            initialDelaySeconds: 10
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            tcpSocket:
              port: 7800
            initialDelaySeconds: 15
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
      restartPolicy: Always
