openshift/route.yaml
#http endpoint route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ace-sample
  labels:
    app: ace-sample
spec:
  host: ''
  to:
    kind: Service
    name: ace-sample
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
---
#admin route
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ace-sample-admin
  labels:
    app: ace-sample
spec:
  host: ''
  to:
    kind: Service
    name: ace-sample
    weight: 100
  port:
    targetPort: admin
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
